# retail-data-analytics-pipeline

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
db scripts/: database_setup.sql
notebooks/: onlinesalesEDA.ipynb
src/: __init__.py  utils.py
